--- a/InvenTree/locale/fi/LC_MESSAGES/django.po
+++ b/InvenTree/locale/fi/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-04 21:22+0000\n"
-"PO-Revision-Date: 2023-07-03 21:44\n"
+"PO-Revision-Date: 2023-07-04 21:47\n"
 "Last-Translator: \n"
 "Language-Team: Finnish\n"
 "Language: fi_FI\n"
@@ -12694,8 +12694,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12830,3 +12829,4 @@ msgstr "Oikeus muokata kohteita"
 #: users/models.py:253
 msgid "Permission to delete items"
 msgstr "Oikeus poistaa kohteita"
+
